CloudFormation/modules/route-tables.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Module 2 - Route Tables for Single Public and Private Subnet

Parameters:
  VpcId:
    Type: String
  IGWId:
    Type: String
  PublicSubnetId:
    Type: String
  PrivateSubnetId:
    Type: String
  NatGatewayId:
    Type: String
  ProjectName:
    Type: String
    Default: my-project

Resources:
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-public-rt"

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGWId

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetId
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-private-rt"

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayId

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetId
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  PublicRouteTableId:
    Value: !Ref PublicRouteTable
    Export:
      Name: Network-PublicRtId
  PrivateRouteTableId:
    Value: !Ref PrivateRouteTable
    Export:
      Name: Network-PrivateRtId
